--- a/02456_Table_Detection/02456_Showcase.ipynb
+++ b/02456_Table_Detection/02456_Showcase.ipynb
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OBS! the model.pt file is not included in the repos and should be downloaded from https://1drv.ms/u/s!AuhjKS1JyxUYgwfRlPo6F7Z-q2A8?e=G6l0Jg and added to the repository."
+    "OBS! the model.pt file should be downloaded from https://1drv.ms/u/s!AuhjKS1JyxUYgwfRlPo6F7Z-q2A8?e=G6l0Jg and added manually to the repository."
    ]
   },
   {
