--- a/Table_Recognition/preprocess_tfrecords.ipynb
+++ b/Table_Recognition/preprocess_tfrecords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,12 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "#variables for tfrecord loader\n",
-    "batchsize = 8\n",
+    "batchsize = 16\n",
     "index_path = None\n",
     "tfrecord_description = {\"image\": \"float\", \n",
     "               \"global_features\": \"int\",\n",
@@ -195,30 +195,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load list of tfRecords from folder: \n",
-    "folder_path = os.getcwd()+r'\\tfrecords'\n",
+    "folder_path = os.path.join(os.getcwd(),'tfrecords')\n",
     "#folder_path = \"C:\\Users\\Jesper\\Desktop\\DataGeneration\\Data_Outputs\"\n",
     "\n",
     "#load filenames of folder: \n",
-    "tfrecord_files = os.listdir(folder_path)"
+    "tfrecord_files = os.listdir(folder_path)\n",
+    "\n",
+    "tfrecord_files = [t for t in tfrecord_files if t.endswith(\".tfrecord\")]\n",
+    "\n",
+    "\n",
+    "outtfpath = os.path.join(os.getcwd(),'processed_tfrecords')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outtfpath = os.getcwd()+r'\\processed_tfrecords'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,60 +230,64 @@
     "    tfrecord_path = os.path.join(folder_path,record)\n",
     "    dataset = TFRecordDataset(tfrecord_path, index_path, tfrecord_description)\n",
     "    loader = torch.utils.data.DataLoader(dataset, batch_size=batchsize)\n",
-    "    for elem in loader:\n",
-    "        dd = tfrecord_transforms(elem,batch_size=batchsize)\n",
-    "        #\n",
-    "        imgs = dd['imgs'].numpy()\n",
-    "        \n",
-    "        #\n",
-    "        nw = dd['num_words'].numpy()\n",
-    "        \n",
-    "        #\n",
-    "        vf = np.array(dd['vertex_features'])\n",
-    "        \n",
-    "        #\n",
-    "        edge_num = []\n",
-    "        for e in dd['edge_index']:\n",
-    "            edge_num.append(e.shape[1])\n",
-    "        \n",
-    "        edge_num = np.array(edge_num,dtype=int)\n",
-    "        \n",
-    "        #\n",
-    "        edge_indexes = []\n",
-    "        maxed = np.max(edge_num)\n",
-    "        for i,ed in enumerate(dd['edge_index']):\n",
-    "            a = np.zeros(maxed)\n",
-    "            b = np.zeros(maxed)\n",
-    "\n",
-    "            a[:edge_num[i]] = ed[0]\n",
-    "            b[:edge_num[i]] = ed[1]\n",
-    "\n",
-    "            edge_indexes.append(np.array([a,b],dtype=int))\n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        out = dict()\n",
-    "        \n",
-    "        out['imgs'] = tf.train.Feature(float_list=tf.train.FloatList(value=imgs.flatten()))\n",
-    "        out['num_words'] = tf.train.Feature(int64_list=tf.train.Int64List(value=nw.flatten()))\n",
-    "        out['vertex_features'] = tf.train.Feature(float_list=tf.train.FloatList(value=vf.flatten()))\n",
-    "        out['num_edges'] =  tf.train.Feature(int64_list=tf.train.Int64List(value=edge_num.flatten()))\n",
-    "        out['edge_indexes'] =  tf.train.Feature(int64_list=tf.train.Int64List(value=np.array(edge_indexes).flatten()))\n",
-    "        \n",
-    "        out['adjacency_matrix_cells'] = tf.train.Feature(int64_list=tf.train.Int64List(value=np.array(dd['adjacency_matrix_cells']).flatten()))\n",
-    "        out['adjacency_matrix_cols'] = tf.train.Feature(int64_list=tf.train.Int64List(value=np.array(dd['adjacency_matrix_cols']).flatten()))\n",
-    "        out['adjacency_matrix_rows'] = tf.train.Feature(int64_list=tf.train.Int64List(value=np.array(dd['adjacency_matrix_rows']).flatten()))\n",
-    "        \n",
     "    with tf.io.TFRecordWriter(os.path.join(outtfpath,record+\".gz\"),options=options) as writer:\n",
-    "        \n",
-    "        all_features = tf.train.Features(feature=out)\n",
+    "        for elem in loader:\n",
+    "            dd = tfrecord_transforms(elem,batch_size=batchsize)\n",
+    "            #\n",
+    "            imgs = dd['imgs'].numpy()\n",
+    "\n",
+    "            #\n",
+    "            nw = dd['num_words'].numpy()\n",
+    "\n",
+    "            #\n",
+    "            vf = np.array(dd['vertex_features'])\n",
+    "\n",
+    "            #\n",
+    "            edge_num = []\n",
+    "            for e in dd['edge_index']:\n",
+    "                edge_num.append(e.shape[1])\n",
+    "\n",
+    "            edge_num = np.array(edge_num,dtype=int)\n",
+    "\n",
+    "            #\n",
+    "            edge_indexes = []\n",
+    "            maxed = np.max(edge_num)\n",
+    "            for i,ed in enumerate(dd['edge_index']):\n",
+    "                a = np.zeros(maxed)\n",
+    "                b = np.zeros(maxed)\n",
+    "\n",
+    "                a[:edge_num[i]] = ed[0]\n",
+    "                b[:edge_num[i]] = ed[1]\n",
+    "\n",
+    "                edge_indexes.append(np.array([a,b],dtype=int))\n",
     "\n",
     "\n",
-    "        seq_ex = tf.train.Example(features=all_features)\n",
-    "        writer.write(seq_ex.SerializeToString()) \n",
-    "    break"
+    "            for b in range(batchsize):\n",
+    "                out = dict()\n",
+    "\n",
+    "                out['imgs'] = tf.train.Feature(float_list=tf.train.FloatList(value=imgs[b].flatten()))\n",
+    "                out['num_words'] = tf.train.Feature(int64_list=tf.train.Int64List(value=nw[b].flatten()))\n",
+    "                out['vertex_features'] = tf.train.Feature(float_list=tf.train.FloatList(value=vf[b].flatten()))\n",
+    "                out['num_edges'] =  tf.train.Feature(int64_list=tf.train.Int64List(value=edge_num[b].flatten()))\n",
+    "                out['edge_indexes'] =  tf.train.Feature(int64_list=tf.train.Int64List(value=np.array(edge_indexes[b]).flatten()))\n",
+    "\n",
+    "                out['adjacency_matrix_cells'] = tf.train.Feature(int64_list=tf.train.Int64List(value=np.array(dd['adjacency_matrix_cells'][b]).flatten()))\n",
+    "                out['adjacency_matrix_cols'] = tf.train.Feature(int64_list=tf.train.Int64List(value=np.array(dd['adjacency_matrix_cols'][b]).flatten()))\n",
+    "                out['adjacency_matrix_rows'] = tf.train.Feature(int64_list=tf.train.Int64List(value=np.array(dd['adjacency_matrix_rows'][b]).flatten()))\n",
+    "\n",
+    "                all_features = tf.train.Features(feature=out)\n",
+    "\n",
+    "\n",
+    "                seq_ex = tf.train.Example(features=all_features)\n",
+    "                writer.write(seq_ex.SerializeToString()) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
